added section hero-img

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -206,6 +206,25 @@ body {
 	}
 }
 
+// hero-img
+
+.hero-img {
+	position: relative;
+	padding: 10em 2em;
+	@include heroimages('../img/tahitism.jpg');
+	text-align: center;
+	color: $pure-white;
+	overflow: hidden;
+	hr{
+		margin: 1em auto;
+	}
+	&__title {
+		font-family: 'Dancing Script', cursive;
+		margin-bottom: 0.5em;
+		font-size: 4.8rem;
+	}
+}
+
 @media (min-width: 768px) {
 	.white-block {
 		height: 50px;
@@ -225,6 +244,17 @@ body {
 	.dreams {
 		&__text {
 			font-size: 1.8rem;
+		}
+	}
+	.hero-img {
+		padding: 30rem 2em;
+		background-image: $blue-gradient, url('../img/tahitib.jpg');
+		hr {
+			margin: 1em auto;
+			width: 70%;
+		}
+		&__text {
+			font-size: 2.2rem;
 		}
 	}
 }
@@ -253,6 +283,16 @@ body {
 		}
 		&__title {
 			font-size: 2.2rem;
+		}
+	}
+	.hero-img {
+		padding: 40rem 2em;
+		&__title {
+			font-size: 7.2rem;
+		}
+		hr {
+			width: 60%;
+			max-width: 900px;
 		}
 	}
 }
