--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,26 @@ body {
     font-size: 1.8rem;
   }
 }
+.hero-img {
+  position: relative;
+  padding: 10em 2em;
+  background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/tahitism.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  text-align: center;
+  color: #fff;
+  overflow: hidden;
+}
+.hero-img hr {
+  margin: 1em auto;
+}
+.hero-img__title {
+  font-family: "Dancing Script", cursive;
+  margin-bottom: 0.5em;
+  font-size: 4.8rem;
+}
+
 @media (min-width: 768px) {
   .white-block {
     height: 50px;
@@ -298,6 +318,17 @@ body {
   }
   .dreams__text {
     font-size: 1.8rem;
+  }
+  .hero-img {
+    padding: 30rem 2em;
+    background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/tahitib.jpg");
+  }
+  .hero-img hr {
+    margin: 1em auto;
+    width: 70%;
+  }
+  .hero-img__text {
+    font-size: 2.2rem;
   }
 }
 @media (min-width: 992px) {
@@ -322,6 +353,16 @@ body {
   }
   .dreams__title {
     font-size: 2.2rem;
+  }
+  .hero-img {
+    padding: 40rem 2em;
+  }
+  .hero-img__title {
+    font-size: 7.2rem;
+  }
+  .hero-img hr {
+    width: 60%;
+    max-width: 900px;
   }
 }
 /*# sourceMappingURL=main.css.map *//*# sourceMappingURL=main.css.map */
